# PricePulse

./: .replit  COMPLETE_PROJECT_FILES.md  LOCAL_DOWNLOAD_PACKAGE.md  LOCAL_SETUP_GUIDE.md  package-lock.json  package.json  pyproject.toml  replit.md
backend/: settings.py  urls.py
client/src/: App.tsx  index.css
client/src/components/: AdminPanel.tsx  CategoryGrid.tsx  Navigation.tsx  PriceChart.tsx  ProductDetail.tsx  ProductGrid.tsx
client/src/pages/: AdminPage.tsx  Home.tsx  Landing.tsx  ProductDetailPage.tsx
client/src/store/: api.ts  authSlice.ts  categoriesSlice.ts  index.ts  productsSlice.ts
prices/: models.py  serializers.py  views.py
products/: models.py  serializers.py  views.py
server/: routes.ts  storage.ts
shared/: schema.ts
users/: models.py  serializers.py  views.py
